--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,1 +1,9 @@
-<h1>about the task manager</h1>
+<h1>about Lit fitness</h1>
+<p>
+    Lit Fitness continues to increase its presence by focusing on the one lifelong benefit valued by everyone: good health.
+ Founded in Southern California in 1984, Lit Fitness continues to seek innovative ways to enhance the physical and emotional well-being of our increasingly diverse membership base.
+</p>
+<p>  Today, our state-of-the-art clubs span the continent, and we're still expanding.
+    Our strong and successful growth stems from our commitment to understanding and meeting the distinct needs of each community we serve. 
+    With our wide range of amenities and a highly trained staff, we provide fun and effective workout options to family members of all ages and interests.
+</p>
